--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@
 /yas/*
 .org-id-locations
 .python-environments/*
-deeper-blue-theme.el
 ido.last
 history
 srecode-map.el
@@ -23,3 +22,4 @@ ac-comphist.dat
 projectile-bookmarks.eld
 bookmarks
 projectile.cache
+.mc-lists.el
