General working condition

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,30 @@
+*[#]
 *~
 [#]*[#]
-*[#]
-/elpa/*
-/yas/*
+
+.mc-lists.el
 .org-id-locations
 .python-environments/*
-ido.last
-history
-srecode-map.el
-tutorial/*
-backups
+
+/elpa/*
+/org-gcal/
+/semanticdb/
+/server
 /url/
 /var/
-/semanticdb/
-recentf
-places
-irony
-company-statistics-cache.el
+/yas/*
 ac-comphist.dat
-/server
-projectile-bookmarks.eld
+backups
 bookmarks
+company-statistics-cache.el
+history
+ido.last
+irony
+oauth2.plstore
+places
+projectile-bookmarks.eld
 projectile.cache
-.mc-lists.el
+recentf
+smex-items
+srecode-map.el
+tutorial/*
